<resources>
    <string name="app_name">LocAnalyser</string>
    <string name="action_settings">Settings</string>
    <string name="menu_navigation_view_help">Help</string>
    <string name="menu_navigation_view_feedback">Feedback</string>
    <string name="sub_menu_navigation_view_more">More</string>
    <string name="sub_menu_navigation_view_assess">Assess</string>
    <string name="sub_menu_navigation_view_about_us">About us</string>
    <string name="action_bar_drawer_toggle_open">Open</string>
    <string name="action_bar_drawer_toggle_close">Close</string>
    <string name="content_main_text_view_larwg">Location Analyser Real World Game</string>
    <string name="menu_navigation_view_settings">Settings</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="content_about_us_text_version">Version 1.01.121</string>
    <string name="content_about_us_text_copyright">© 2016 SQUVAO</string>
    <string name="content_about_us_text_rights">All rights reserved</string>
    <string name="main_activity_navigation_item_feedback_email">12ase@kings-school.co.uk</string>
    <string name="main_activity_navigation_item_feedback_message">Your message...</string>
    <string name="main_activity_navigation_item_feedback_title">Send Mail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="content_main_button_play">Play</string>
    <string name="title_activity_maps">Map</string>
    <string name="content_settings_button_more_information">More information</string>
    <string name="content_settings_button_common">Common</string>
    <string name="content_settings_button_notifications">Notifications</string>
    <string name="content_settings_button_reset_settings">Reset</string>
    <string name="content_settings_button_account">Account</string>
    <string name="content_settings_about">About</string>
    <string name="sub_menu_navigation_view_contact_author">Contact author</string>
    <string name="content_settings_button_exit">Exit</string>
</resources>
