<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.squvao.locanalyser.SettingsActivity"
    tools:showIn="@layout/activity_settings">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="@drawable/layout_separator"
                android:dividerPadding="6dp"
                android:showDividers="middle">
                <RelativeLayout android:layout_height="150dp"
                    android:layout_width="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/avatar"
                        android:layout_marginLeft="29dp"
                        android:layout_marginStart="29dp"
                        android:layout_marginBottom="26dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12ase@kings-school.co.uk"
                        android:textSize="20dp"
                        android:textColor="@android:color/darker_gray"
                        android:layout_alignBottom="@+id/profile_image"
                        android:layout_toRightOf="@+id/profile_image"
                        android:layout_toEndOf="@+id/profile_image"
                        android:id="@+id/textView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Luc1ffer"
                        android:textSize="30dp"
                        android:textColor="@android:color/black"
                        android:id="@+id/textView2"
                        android:layout_above="@+id/textView"
                        android:layout_toRightOf="@+id/profile_image"
                        android:layout_toEndOf="@+id/profile_image" />


                </RelativeLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_settings_button_more_information"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="?attr/colorPrimary"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="20dp"
                    android:gravity="start"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_navigation_view_settings"
                        android:textColor="?attr/colorPrimary"
                        android:paddingLeft="20dp"
                        android:textStyle="bold"
                        style="@style/Base.TextAppearance.AppCompat.Small" />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_settings_button_common"
                        android:drawableLeft="@drawable/ic_format_list_bulleted"
                        android:gravity="left|center_vertical"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_settings_button_notifications"
                        android:drawableLeft="@drawable/ic_bell"
                        android:gravity="left|center_vertical"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_settings_button_account"
                        android:drawableLeft="@drawable/ic_account_box_outline"
                        android:gravity="left|center_vertical"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_settings_button_reset_settings"
                        android:drawableLeft="@drawable/ic_sync"
                        android:gravity="left|center_vertical"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"/>
                </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content_settings_about"
                    android:textColor="?attr/colorPrimary"
                    android:paddingLeft="20dp"
                    android:textStyle="bold"
                    style="@style/Base.TextAppearance.AppCompat.Small" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_menu_navigation_view_about_us"
                    android:drawableLeft="@drawable/ic_account_box_dark"
                    android:gravity="left|center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/content_settings_button_about_us"
                    android:onClick="buttonsListener"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_menu_navigation_view_contact_author"
                    android:drawableLeft="@drawable/ic_email"
                    android:gravity="left|center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:id="@+id/content_settings_button_contact_author"
                    android:onClick="buttonsListener"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_settings_button_exit"
                style="@style/ButtonExitTheme"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
